# Bitwise

./: .dockerignore  .gitignore  Dockerfile  Makefile  Procfile  README.md  pyproject.toml  requirements.txt
bitwise/: __main__.py  config.py  logger.py
bitwise/cogs/info/: help.py
bitwise/cogs/music/: music.py  player.py
bitwise/core/: __init__.py  bitwise.py  settings.py
bitwise/helper/: config.py  logger.py
bitwise/meta/: __init__.py  core.py  settings.py
tests/: test_bitwise.py
